--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,19 @@ body {
 	background: black;
 }
 
+/*
 * {
 	border: 1px dashed red;
 	min-height: 10px;
 }
+*/
 
 .postcard {
 	background: white;
 	width: 400px;
 	height: 300px;
 	margin: auto;
+	padding: 5px;
 }
 
 .postcard-header {
@@ -21,6 +24,10 @@ body {
 .postcard-header img {
 	width: 50px;
 	height: 50px;
+}
+
+h1 {
+	font-family: "Bubblegum Sans", cursive;
 }
 
 .postcard-header h1 {
